--- a/LinearRegression_with_Scikit.ipynb
+++ b/LinearRegression_with_Scikit.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -115,15 +115,16 @@
         "from sklearn.metrics import mean_squared_error\n",
         "\n",
         "# Generate synthetic data\n",
-        "np.random.seed(42)\n",
+        "np.random.seed(42) #We can put a random number helps us to generate the random number.\n",
         "N=100 #Number of instances\n",
         "x = 2 * np.random.rand(N, 1) - 1  # Random x values between -1 and 1\n",
-        "y = x**2 + np.random.randn(100, 1) * 0.1  # y = x^2 + noise"
+        "noise = np.random.rand(N,1)-*0.2-0.1 # noise will range -.1 to 0.1\n",
+        "r = 3*x + 5 + np.random.randn(100, 1) * 0.1"
       ],
       "metadata": {
         "id": "BjnkGplFp0gY"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
